fixe alignment issues

--- a/src/app/article-preview/article-preview.component.scss
+++ b/src/app/article-preview/article-preview.component.scss
@@ -16,6 +16,19 @@
     width: 100%;
   }
 }
+:host.mobile {
+  .created-at {
+    bottom: unset;
+    top: 14px;
+    font-size: 16px;
+  }
+  .author {
+    width: 100%;
+  }
+  .header {
+    font-size: 20px;
+  }
+}
 .wrapper {
   width: 100%;
   background-color: #111111;
