--- a/src/app/product-preview/product-preview.component.scss
+++ b/src/app/product-preview/product-preview.component.scss
@@ -77,7 +77,7 @@
 .content {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
   >div {
     width: 50%;
